--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
   <link rel="stylesheet" href="style.css" href="style.css"> 
 </head>
 <body>
-  <img src="https://images.unsplash.com/photo-1766654271534-575410ad1468?q=80&w=1025&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+  <div id="parent">
+    <h1>Hello Guys</h1>
+    
+  </div>
 </body>
 </html>
 
