--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
   <link rel="stylesheet" href="style.css" href="style.css"> 
 </head>
 <body>
-  <div id="parent">
-    <h1>Hello Guys</h1>
+  <main>
+    <header>header</header>
+    <section>section</section>
+    <div id="div1">div1</div>
+    <div id="div2">div2</div>
+    <div id="bottom1">bottom1</div>
+    <div id="bottom2">bottom2</div>
+
     
-  </div>
+  </main>
 </body>
 </html>
 
