--- a/index.html
+++ b/index.html
@@ -5,16 +5,7 @@
   <link rel="stylesheet" href="style.css" href="style.css"> 
 </head>
 <body>
-  <main>
-    <header>header</header>
-    <section>section</section>
-    <div id="div1">div1</div>
-    <div id="div2">div2</div>
-    <div id="bottom1">bottom1</div>
-    <div id="bottom2">bottom2</div>
-
-    
-  </main>
+    <script type="module" src="script.js"></script>
 </body>
 </html>
 
