--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
   <link rel="stylesheet" href="style.css" href="style.css"> 
 </head>
 <body>
-    <script type="module" src="script.js"></script>
+  <div id="box"></div>
+   
+
+  <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+  <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+  <script type="module" src="script.js"></script>
 </body>
 </html>
 
