--- a/index.html
+++ b/index.html
@@ -1,16 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Password Check</title>
+  <title></title>
   <link rel="stylesheet" href="style.css" href="style.css"> 
 </head>
 <body>
-  <div id="box"></div>
-   
-
-  <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-  <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-  <script type="module" src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
 
