--- a/index.html
+++ b/index.html
@@ -10,7 +10,23 @@
 </html>
 
 
+<!-- if we make function with variable we cant use it before function 
+ if we create function directly with function name we can use it before function 
+ details("samyak",19,"samyak@gmail.com")
+function details(){
+    console.log(arguments[0])
+}
 
+
+
+
+
+
+
+
+
+function 2hr
+questions of loop-->
 
 
 
